Time and space complexity for DFS

--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@
     auto parents      = map<cell_t, cell_t>();       // (3)
 \end{lstlisting}
 
-В общем случае структура \verb|parents| является необязательной, поскольку она используется только для восстановления пути до найденного элемента, что не всегда необходимо. Поскольку, в данной работе алгоритм DFS используется именно для поиска пути, а не для нахождения элемента, избавиться от структуры \verb|parents| невозможно.
+В общем случае структура \verb|parents| является необязательной, поскольку она используется только для восстановления пути до найденного элемента, что не всегда необходимо. Поскольку в данной работе алгоритм DFS используется именно для поиска пути, а не для нахождения элемента, избавиться от структуры \verb|parents| невозможно.
 
 Далее, пока стек \verb|search_stack| не пуст, из него изымается верхний элемент \verb|next|. Если \verb|next| подходит под условия поиска, то из словаря родителей строится путь до найденного элемента, после чего этот путь возвращается как результат поиска:
 
@@ -90,7 +90,9 @@
 Стоит так же отметить, что приведённая здесь реализация может быть оптимизирована путём использования одной только структуры \verb|parents| вместо пары \verb|parents| и \verb|visited|, но подобный подход, пусть и не значительно, но уложил бы логику реализации алгоритма, требуя отдельной обработки определённых частных случаев. Поскольку данная работа фокусируется на сравнительной характеристике алгоритмов, а не на предельной их оптимизации, в ней подобная более оптимальная реализация подробно не рассматривается.
 
 \subsubsection{Оценка сложности}
-\ldots
+Пусть в связном графе, по которому производится поиск, содержится \({ V }\) вершин и \({ E }\) рёбер. В худшем случае алгоритм DFS обходит все вершины графа, для каждой из них проверяя все примыкающие к ней рёбра. Время обработки каждого из них составляет \({ \operatorname{O}(\log_2 V) }\), поскольку оно включает в себя работу со словарями и множествами из не более чем \({ V }\) элементов. Таким образом, верхняя оценка времени выполнения алгоритма составляет \({ \operatorname{O}((V + E) \cdot \log_2 V) }\).
+
+Каждая вершина попадает в \verb|visited|, \verb|parents| и \verb|stack| не более одного раза, так что верхняя оценка потребления памяти составляет \({ \operatorname{O}(V) }\).
 
 \subsection{Поиск в ширину (Breadth-first search)}
 \ldots
