Description of BFS

--- a/main.tex
+++ b/main.tex
@@ -90,14 +90,33 @@
 Стоит так же отметить, что приведённая здесь реализация может быть оптимизирована путём использования одной только структуры \verb|parents| вместо пары \verb|parents| и \verb|visited|, но подобный подход, пусть и не значительно, но уложил бы логику реализации алгоритма, требуя отдельной обработки определённых частных случаев. Поскольку данная работа фокусируется на сравнительной характеристике алгоритмов, а не на предельной их оптимизации, в ней подобная более оптимальная реализация подробно не рассматривается.
 
 \subsubsection{Оценка сложности}
+\label{ssub:DFS_complexity}
 Пусть в связном графе, по которому производится поиск, содержится \({ V }\) вершин и \({ E }\) рёбер. В худшем случае алгоритм DFS обходит все вершины графа, для каждой из них проверяя все примыкающие к ней рёбра. Время обработки каждого из них составляет \({ \operatorname{O}(\log_2 V) }\), поскольку оно включает в себя работу со словарями и множествами из не более чем \({ V }\) элементов. Таким образом, верхняя оценка времени выполнения алгоритма составляет \({ \operatorname{O}((V + E) \cdot \log_2 V) }\).
 
 Каждая вершина попадает в \verb|visited|, \verb|parents| и \verb|stack| не более одного раза, так что верхняя оценка потребления памяти составляет \({ \operatorname{O}(V) }\).
 
-\subsection{Поиск в ширину (Breadth-first search)}
-\ldots
+\subsection{Поиск в ширину (Breadth-first search, BFS)}
+\subsubsection{Описание алгоритма}
+В общем случае, реализация алгоритма поиска в ширину полностью идентична таковому для поиска в глубину. Единственное отличие состоит в том, что для определения очерёдности посещения вместо стека используется очередь. Как следствие, алгоритм BSF гарантирует, что все  вершины заданной глубины будут посещены раньше всех вершин большей глубины, так что в процессе поиска алгоритм BFS, в отличие от DSF, как бы разрастается вширь, постепенно покрывая все большую и большую окрестность вершины, из которой начинается поиск (отсюда и название.)
+
+Фактическая реализация этого алгоритма в данном проекте, однако, в значительной степени отличается от алгоритма DFS. Вместо прямой реализации аналогичной той, что была приведения выше для DFS, алгоритм опирается на использование функции, реализующей обобщённый шаг поиска в ширину, используемый в дальнейшем алгоритмом поиска в ширину с двух сторон. Этот подход будет более подробно описан в части \ref{ssub:BFS_implementation}.
+
+\subsubsection{Оценка сложности}
+Очереди асимптотически полностью аналогичны стекам, так что верхняя оценка и времени выполнения, и потребления памяти алгоритмом BFS совпадает с оценками для DFS (см. часть \ref{ssub:DFS_complexity}):
+\begin{itemize}
+    \item время выполнения --- \({ \operatorname{O}((V + E) \cdot \log_2 V) }\),
+    \item потребление памяти --- \({ \operatorname{O}(V) }\).
+\end{itemize}
 
 \subsection{Поиск в ширину с двух сторон}
+\subsubsection{Описание алгоритма}
+\ldots
+
+\subsubsection{Оценка сложности}
+\ldots
+
+\subsubsection{Реализация алгоритма поиска в ширину}
+\label{ssub:BFS_implementation}
 \ldots
 
 \section{Сравнение эффективности}
