Better complexity analysis

--- a/main.tex
+++ b/main.tex
@@ -91,9 +91,9 @@
 
 \subsubsection{Оценка сложности}
 \label{ssub:DFS_complexity}
-Пусть в связном графе, по которому производится поиск, содержится \({ V }\) вершин и \({ E }\) рёбер. В худшем случае алгоритм DFS обходит все вершины графа, для каждой из них проверяя все примыкающие к ней рёбра. Время обработки каждого из них составляет \({ \operatorname{O}(\log_2 V) }\), поскольку оно включает в себя работу со словарями и множествами из не более чем \({ V }\) элементов. Таким образом, верхняя оценка времени выполнения алгоритма составляет \({ \operatorname{O}((V + E) \cdot \log_2 V) }\).
+Пусть в связном графе, по которому производится поиск, содержится \({ V }\) вершин и \({ E }\) рёбер. В худшем случае алгоритм DFS обходит все вершины и рёбра графа. Время обработки каждой из вершин составляет \({ O(1) }\), поскольку оно включает в себя лишь работу с очередью и проверку на равенство вершины искомой вершине. Время обработки каждого из рёбер составляет \({ O(\log V) }\), поскольку оно включает в себя работу со словарями и множествами из не более чем \({ V }\) элементов. Таким образом, верхняя оценка времени выполнения алгоритма составляет \({ O(V + E \cdot \log V) }\).
 
-Каждая вершина попадает в \verb|visited|, \verb|parents| и \verb|stack| не более одного раза, так что верхняя оценка потребления памяти составляет \({ \operatorname{O}(V) }\).
+Каждая вершина попадает в \verb|visited|, \verb|parents| и \verb|stack| не более одного раза, так что верхняя оценка потребления памяти составляет \({ O(V) }\).
 
 \subsection{Поиск в ширину (Breadth-first search, BFS)}
 \subsubsection{Описание алгоритма}
@@ -104,8 +104,8 @@
 \subsubsection{Оценка сложности}
 Очереди асимптотически полностью аналогичны стекам, так что верхняя оценка и времени выполнения, и потребления памяти алгоритмом BFS совпадает с оценками для DFS (см. часть \ref{ssub:DFS_complexity}):
 \begin{itemize}
-    \item время выполнения --- \({ \operatorname{O}((V + E) \cdot \log_2 V) }\),
-    \item потребление памяти --- \({ \operatorname{O}(V) }\).
+    \item время выполнения --- \({ O(V + E \cdot \log V) }\),
+    \item потребление памяти --- \({ O(V) }\).
 \end{itemize}
 
 \subsection{Поиск в ширину с двух сторон}
