--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@
 \subsubsection{Описание алгоритма}
 Суть алгоритма поиска с двух сторон, как нетрудно следует из названия, состоит в том, что поиск пути начинается сразу с двух сторон --- и сточки начала, и с точки конца пути. Окончание поиска происходит в тот момент, когда два поиска пересекаются в некоторой вершине, через которую, соответственно, и будет проходить искомый путь.
 
-Реализация алгоритма двустороннего поиска в целом аналогична реализации алгоритмов DFS и BFS. Сначала  инициализируются используемые структуры --- отдельно для поиска в прямом направлении и отдельно для поиска в обратном направлении:
+Реализация алгоритма двустороннего поиска в целом аналогична реализации алгоритма BFS. Сначала инициализируются используемые структуры --- отдельно для поиска в прямом направлении и отдельно для поиска в обратном направлении:
 
 \begin{lstlisting}[language=C++]
     set<cell_t>         visited_forward({_start_pos});
@@ -200,7 +200,23 @@
 \end{lstlisting}
 
 \subsubsection{Оценка сложности}
-\ldots
+Верхняя оценка для времени работы и потребления памяти в худшем случае для алгоритма двустороннего поиска совпадает с оценками для DFS и BFS:
+\begin{itemize}
+    \item время выполнения --- \({ O(V + E \cdot \log V) }\),
+    \item потребление памяти --- \({ O(V) }\).
+\end{itemize}
+Это связано с тем, что в худшем случае алгоритму так же приходится обходить все ребра и вершины графа, совершая над ними те же операции, что и для алгоритма BFS.
+
+Однако, для среднего случая можно получить более благоприятную оценку времени выполнения, исходя из немного других соображений. Пусть \({ b }\) --- средний коэффициент связности рассматриваемого графа, \({ d }\) --- длина искомого пути. Тогда, из комбинаторных соображений, обработка алгоритмом BFS всех вершин каждого следующего уровня глубины в среднем составляет \({ O(b^d) }\), а итоговая оценка для всего алгоритма BFS составляет
+\[
+    O(b^1 + b^2 + \cdots + b^d) = O(b^d).
+\]
+
+Алгоритм же двустороннего поиска состоит из двух одновременных BFS, каждый из которых в среднем случае отвечает половине искомого пути и потому опускается на глубину примерно равную \({ d/2 }\). Таким образом общая оценка времени выполнения для алгоритма двустороннего поиска составляет
+\[
+    O(b^{\frac{d}{2}} + b^{\frac{d}{2}}) = O(b^{\frac{d}{2}}),
+\]
+что в значительной степени лучше средней оценки для алгоритма BFS.
 
 \subsubsection{Реализация алгоритма поиска в ширину}
 \label{ssub:BFS_implementation}
