--- a/main.tex
+++ b/main.tex
@@ -42,9 +42,9 @@
 \label{ssub:DFS_algorithm}
 Поиск в глубину, как и поиск в ширину, является одним из базовых алгоритмов поиска на графах, в основе которого лежит использование стека для определения очерёдности посещения элементов графа. Для его реализации на C++ требуется 3 вспомогательные структуры:
 \begin{itemize}
-    \item[(1)] множество посещённых элементов графа;
-    \item[(2)] стек, определяющий очерёдность посещения;
-    \item[(3)] словарь родителей.
+    \item[(1)] Множество посещённых элементов графа.
+    \item[(2)] Стек, определяющий очерёдность посещения.
+    \item[(3)] Словарь родителей.
 \end{itemize}
 
 \begin{lstlisting}[language=C++]
@@ -111,6 +111,7 @@
 
 \subsection{Поиск в ширину с двух сторон (Bidirectional search)}
 \subsubsection{Описание алгоритма}
+\label{ssub:bi_BFS_algorithm}
 Суть алгоритма поиска с двух сторон, как нетрудно следует из названия, состоит в том, что поиск пути начинается сразу с двух сторон --- и сточки начала, и с точки конца пути. Окончание поиска происходит в тот момент, когда два поиска пересекаются в некоторой вершине, через которую, соответственно, и будет проходить искомый путь.
 
 Реализация алгоритма двустороннего поиска в целом аналогична реализации алгоритма BFS. Сначала инициализируются используемые структуры --- отдельно для поиска в прямом направлении и отдельно для поиска в обратном направлении:
@@ -127,8 +128,8 @@
 
 Так же создаются две вспомогательные переменные:
 \begin{itemize}
-    \item[(1)] переменная-флаг, отвечающая за окончание поиска;
-    \item[(2)] переменная, куда будет сохранена вершина --- пересечение поисков.
+    \item[(1)] Переменная-флаг, отвечающая за окончание поиска.
+    \item[(2)] Переменная, куда будет сохранена вершина --- пересечение поисков.
 \end{itemize}
 \begin{lstlisting}[language=C++]
     bool is_done = false; // (1)
@@ -220,7 +221,51 @@
 
 \subsubsection{Реализация алгоритма поиска в ширину}
 \label{ssub:BFS_implementation}
-\ldots
+Алгоритм BFS можно реализовать, используя функцию \verb|bfs_step|. Для этого используются те же основные структуры:
+\begin{lstlisting}[language=C++]
+    set<cell_t>         visited({_start_pos});
+    queue<cell_t>       search_queue({_start_pos});
+    map<cell_t, cell_t> parents;
+\end{lstlisting}
+
+Так же для такой реализации потребуются две вспомогательные переменные:
+\begin{itemize}
+    \item[(1)] Переменная-флаг, отвечающий за окончание поиска (см. часть~\ref{ssub:bi_BFS_algorithm}).
+    \item[(2)] Множество, хранящее в себе только вершину \verb|_dest_pos|, т.е. конец искомого пути. Это множество будет передаваться в \verb|bfs_step| в качестве аргумента \verb|visited_backwards|. Поиск останавливается, как только множества \verb|visited_forward| и \verb|visited_backward| пересекаются хотя бы по одному элементу,  так что таким образом поиск будет остановлен, как только алгоритм поиска доберётся до \verb|_dest_pos|.
+\end{itemize}
+\begin{lstlisting}[language=C++]
+    bool              is_done = false;              // (1)
+    const set<cell_t> destination_set({_dest_pos}); // (2)
+\end{lstlisting}
+
+Далее, пока очередь \verb|search_queue| непуста, выполняются шаги поиска:
+\begin{lstlisting}[language=C++]
+    while (!search_queue.empty()) {
+        bfs_step(
+            &visited, &destination_set,
+            &search_queue, &parents,
+            &is_done, nullptr
+        );
+
+        // <...>
+    }
+\end{lstlisting}
+
+В случае, если функция \verb|bfs_step| сигнализирует об окончании поиска, устанавливая флагу \verb|is_done| значение \verb|true|, поиск завершается и найденный путь возвращается в качестве результата:
+\begin{lstlisting}[language=C++]
+    while (!search_queue.empty()) {
+        // <...>
+
+        if (is_done) {
+            return build_path(parents, _start_pos, _dest_pos);
+        }
+    }
+\end{lstlisting}
+
+Если же в какой-то момент очередь окажется пуста, это  будет означать, что искомого пути не существует, так что в качестве результата вернётся пустой путь.
+\begin{lstlisting}[language=C++]
+    return {};
+\end{lstlisting}
 
 \section{Сравнение эффективности}
 \ldots
