--- a/main.tex
+++ b/main.tex
@@ -201,6 +201,7 @@
 \end{lstlisting}
 
 \subsubsection{Оценка сложности}
+\label{ssub:bi_BFS_complexity}
 Верхняя оценка для времени работы и потребления памяти в худшем случае для алгоритма двустороннего поиска совпадает с оценками для DFS и BFS:
 \begin{itemize}
     \item время выполнения --- \({ O(V + E \cdot \log V) }\),
@@ -218,6 +219,8 @@
     O(b^{\frac{d}{2}} + b^{\frac{d}{2}}) = O(b^{\frac{d}{2}}),
 \]
 что в значительной степени лучше средней оценки для алгоритма BFS.
+
+Отметим так же, что подобная оценка для алгоритма DFS совпадает с таковой для BFS и потому равна \({ O(b^{d}) }\).
 
 \subsubsection{Реализация алгоритма поиска в ширину}
 \label{ssub:BFS_implementation}
@@ -268,7 +271,20 @@
 \end{lstlisting}
 
 \section{Сравнение эффективности}
-\ldots
+В части~\ref{ssub:bi_BFS_complexity} мы выяснили, что, несмотря на то, что в худшем случае алгоритм поиска с двух сторон имеет асимптотику равную асимптотике алгоритма BFS, в среднем случае двусторонний поиск является более эффективным. Перейдём же к основной цели данной работы --- проверим так ли это.
+
+Для этого будем многократно запускать поиск пути на карте фиксированного размера, каждый раз произвольным образом заполняя её проходимыми и непроходимыми клетками в соотношении \({ 1 : 3 }\) и так же произвольно выбирая точки начала и конца пути. После \({ n }\)-го числа забегов выводится средний результат времени выполнения для каждого из алгоритмов.
+
+Результаты тестов подтверждают теоретические предсказания. Так, для карты 60x120 и теста на 10000 забегах, вывод программы выглядит следующим образом:
+\begin{lstlisting}[language=C++]
+    Running a 10000 runs test for a 60x120 map...
+    Averate time:
+       BFS  : 1638µs
+       DFS  : 1774µs
+      biBFS : 1177µs
+\end{lstlisting}
+
+Отсюда получаем, что в среднем случае алгоритм двустороннего поиска оказывается примерно в \({ 1.4 }\) раза быстрее одностороннего алгоритма поиска в ширину, который, в свою очередь, по скорости выполнения сопоставим с алгоритмом DFS.
 
 \section{Выводы}
 \ldots
