Amend the title

--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 % \renewcommand{\thesubsubsection}{}
 % \renewcommand{\theparagraph}{}
 
-\title{Алгоритмы поиска на не взвешенных графах на примере поиска путей в лабиринтах}
+\title{Сравнение эффективности алгоритмов поиска на невзвешенных графах на примере поиска пути на карте с препятствиями}
 \author{Виногродский Серафим}
 
 \begin{document}
