--- a/main.tex
+++ b/main.tex
@@ -34,13 +34,21 @@
 \end{titlepage}
 
 \section{Введение}
-\ldots
+Поиск пути между двумя вершинами некоторого графа --- это задача, которая очень часто встречается в различных сферах приложения информатики. В связи с этим она имеет множество вариантов решения, каждое из которых имеет свои преимущества и недостатки.
+В этой работе мы рассмотрим три наиболее распространённых и простых из алгоритмов, нацеленных на её решение:
+\begin{itemize}
+    \item поиск в глубину,
+    \item поиск в ширину,
+    \item поиск с двух сторон.
+\end{itemize}
+
+Помимо непосредственного описания принципов работы каждого из алгоритмов и их реализации на языке C++, мы так же проанализируем эффективность каждого из них. Делать мы это будем как с теоретической точки зрения, используя асимптотическую оценку для времени выполнения и потребления памяти, так и с практической --- сравним скорость выполнения каждого из алгоритмов на примере поиска пути на карте с препятствиями.
 
 \section{Описание реализованных алгоритмов поиска}
 \subsection{Поиск в глубину (Depth-first search, DFS)}
 \subsubsection{Описание алгоритма}
 \label{ssub:DFS_algorithm}
-Поиск в глубину, как и поиск в ширину, является одним из базовых алгоритмов поиска на графах, в основе которого лежит использование стека для определения очерёдности посещения элементов графа. Для его реализации на C++ требуется 3 вспомогательные структуры:
+В основе реализации алгоритма поиска в ширину лежит использование стека для определения очерёдности посещения элементов графа. Для его реализации на C++ требуется 3 вспомогательные структуры:
 \begin{itemize}
     \item[(1)] Множество посещённых элементов графа.
     \item[(2)] Стек, определяющий очерёдность посещения.
