Correctly display the µ symbol in tle lstlisting environments

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
 \lstset{framextopmargin=50pt,frame=leftline}
+\lstset{literate={µ}{\textmu}1}
 
 % \renewcommand{\thesection}{}
 % \renewcommand{\thesubsection}{}
