Some more effectiveness comparison

--- a/main.tex
+++ b/main.tex
@@ -284,16 +284,23 @@
 
 Для этого будем многократно запускать поиск пути на карте фиксированного размера, каждый раз произвольным образом заполняя её проходимыми и непроходимыми клетками в соотношении \({ 1 : 3 }\) и так же произвольно выбирая точки начала и конца пути. После \({ n }\)-го числа забегов выводится средний результат времени выполнения для каждого из алгоритмов.
 
-Результаты тестов подтверждают теоретические предсказания. Так, для карты 60x120 и теста на 10000 забегах, вывод программы выглядит следующим образом:
-\begin{lstlisting}[language=C++]
-    Running a 10000 runs test for a 60x120 map...
+Результаты тестов подтверждают теоретические предсказания. Так, для карты \({ 60 \times 120 }\) и теста на \({ 10000 }\) забегах, вывод программы выглядит следующим образом:
+\begin{lstlisting}
     Averate time:
        BFS  : 1638µs
        DFS  : 1774µs
       biBFS : 1177µs
 \end{lstlisting}
-
 Отсюда получаем, что в среднем случае алгоритм двустороннего поиска оказывается примерно в \({ 1.4 }\) раза быстрее одностороннего алгоритма поиска в ширину, который, в свою очередь, по скорости выполнения сопоставим с алгоритмом DFS.
+
+Аналогично, для карты \({ 200 \times 200 }\) получаем следующее результаты:
+\begin{lstlisting}
+    Averate time:
+       BFS  : 11468µs
+       DFS  : 10319µs
+      biBFS : 7249µs
+\end{lstlisting}
+Разрыв по скорости выполнения получается даже больше --- поиск в двух сторон работает примерно в \({ 1.6 }\) раза быстрее.
 
 \section{Выводы}
 \ldots
