A correction of complexity analysis

--- a/main.tex
+++ b/main.tex
@@ -218,18 +218,18 @@
 \end{itemize}
 Это связано с тем, что в худшем случае алгоритму так же приходится обходить все ребра и вершины графа, совершая над ними те же операции, что и для алгоритма BFS.
 
-Однако, для среднего случая можно получить более благоприятную оценку времени выполнения, исходя из немного других соображений. Пусть \({ b }\) --- средний коэффициент связности рассматриваемого графа, \({ d }\) --- длина искомого пути. Тогда, из комбинаторных соображений, обработка алгоритмом BFS всех вершин каждого следующего уровня глубины в среднем составляет \({ O(b^d) }\), а итоговая оценка для всего алгоритма BFS составляет
+Однако, для среднего случая можно получить более благоприятную оценку времени выполнения, исходя из немного других соображений. Пусть \({ b }\) --- средний коэффициент связности рассматриваемого графа, \({ d }\) --- длина искомого пути. Тогда, из комбинаторных соображений, обработка алгоритмом BFS всех вершин каждого следующего уровня глубины в среднем составляет \({ O(b^d) \cdot O(\log b^d) }\) (где \({ O(\log b^d) }\) --- время обработки каждой отдельной вершины), а итоговая оценка для всего алгоритма BFS составляет
 \[
-    O(b^1 + b^2 + \cdots + b^d) = O(b^d).
+    O\left(\sum_{k=1}^{d} b^{k} \cdot \log b^{k}\right) = O(b^d \cdot \log b^{d}) = O(b^{d} \cdot d\log b).
 \]
 
 Алгоритм же двустороннего поиска состоит из двух одновременных BFS, каждый из которых в среднем случае отвечает половине искомого пути и потому опускается на глубину примерно равную \({ d/2 }\). Таким образом общая оценка времени выполнения для алгоритма двустороннего поиска составляет
 \[
-    O(b^{\frac{d}{2}} + b^{\frac{d}{2}}) = O(b^{\frac{d}{2}}),
+    O(2 \cdot b^{\frac{d}{2}} \cdot \frac{d}{2} \log b) = O(b^{\frac{d}{2}} \cdot d\log b),
 \]
 что в значительной степени лучше средней оценки для алгоритма BFS.
 
-Отметим так же, что подобная оценка для алгоритма DFS совпадает с таковой для BFS и потому равна \({ O(b^{d}) }\).
+Отметим так же, что подобная оценка для алгоритма DFS совпадает с таковой для BFS и потому равна \({ O(b^{d} \cdot \log b^d) }\).
 
 \subsubsection{Реализация алгоритма поиска в ширину}
 \label{ssub:BFS_implementation}
