Conclusions (likely incomplete)

--- a/main.tex
+++ b/main.tex
@@ -303,6 +303,6 @@
 Разрыв по скорости выполнения получается даже больше --- поиск в двух сторон работает примерно в \({ 1.6 }\) раза быстрее.
 
 \section{Выводы}
-\ldots
+Таким образом, из трёх проанализированных в этой работе алгоритмов наиболее эффективным, как и предсказали теоретические рассуждения, оказался алгоритм поиска с двух сторон. Не стоит, однако, думать, что двусторонний поиск всегда лучше одностороннего, поскольку у него есть и значительный недостаток: для его применимости требуется, чтобы точка конца пути была изначально известной, что накладывает значительные ограничения на зону его применимости.
 
 \end{document}
