--- a/main.tex
+++ b/main.tex
@@ -36,14 +36,14 @@
 
 \section{Введение}
 Поиск пути между двумя вершинами некоторого графа --- это задача, которая очень часто встречается в различных сферах приложения информатики. В связи с этим она имеет множество вариантов решения, каждое из которых имеет свои преимущества и недостатки.
-В этой работе мы рассмотрим три наиболее распространённых и простых из алгоритмов, нацеленных на её решение:
+В этой работе мы рассмотрим три наиболее распространённых и простых из этих решений:
 \begin{itemize}
     \item поиск в глубину,
     \item поиск в ширину,
     \item поиск с двух сторон.
 \end{itemize}
 
-Помимо непосредственного описания принципов работы каждого из алгоритмов и их реализации на языке C++, мы так же проанализируем эффективность каждого из них. Делать мы это будем как с теоретической точки зрения, используя асимптотическую оценку для времени выполнения и потребления памяти, так и с практической --- сравним скорость выполнения каждого из алгоритмов на примере поиска пути на карте с препятствиями.
+Помимо непосредственного описания принципов работы каждого из этих алгоритмов и их реализации на языке C++, мы так же проанализируем эффективность каждого из них. Делать мы это будем как с теоретической точки зрения, используя асимптотическую оценку для времени выполнения и потребления памяти, так и с практической --- сравним скорость выполнения каждого из алгоритмов на примере поиска пути на карте с препятствиями.
 
 \section{Описание реализованных алгоритмов поиска}
 \subsection{Поиск в глубину (Depth-first search, DFS)}
@@ -96,7 +96,7 @@
 
 Следствием использования стека для определения очерёдности посещения является то, что дети только что посещённых узлов обрабатываются раньше детей узлов, посещённых до этого. Таким образом алгоритм DFS как бы старается забраться как можно глубже в структуру дерева (что вполне соответствует названию алгоритма), вместо того, что бы последовательно обрабатывать все узлы все большей и большей глубины, как это делает алгоритм BSF, который будет описан далее.
 
-Стоит так же отметить, что приведённая здесь реализация может быть оптимизирована путём использования одной только структуры \verb|parents| вместо пары \verb|parents| и \verb|visited|, но подобный подход, пусть и не значительно, но уложил бы логику реализации алгоритма, требуя отдельной обработки определённых частных случаев. Поскольку данная работа фокусируется на сравнительной характеристике алгоритмов, а не на предельной их оптимизации, в ней подобная более оптимальная реализация подробно не рассматривается.
+Стоит так же отметить, что приведённая здесь реализация может быть оптимизирована путём использования одной только структуры \verb|parents| вместо пары \verb|parents| и \verb|visited|, но подобный подход, пусть и не значительно, но уложил бы логику реализации алгоритма, требуя отдельной обработки определённых частных случаев. Поскольку данная работа фокусируется на сравнительной характеристике алгоритмов, а не на предельной их оптимизации, в ней подобная реализация подробно не рассматривается.
 
 \subsubsection{Оценка сложности}
 \label{ssub:DFS_complexity}
