Reference the repo containing the full code

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage{mathtools}
 \usepackage{booktabs}
 \usepackage{listings}
+\usepackage{hyperref}
 \usepackage{courier}
 
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
@@ -304,5 +305,7 @@
 
 \section{Выводы}
 Таким образом, из трёх проанализированных в этой работе алгоритмов наиболее эффективным, как и предсказали теоретические рассуждения, оказался алгоритм поиска с двух сторон. Не стоит, однако, думать, что двусторонний поиск всегда лучше одностороннего, поскольку у него есть и значительный недостаток: для его применимости требуется, чтобы точка конца пути была изначально известной, что накладывает значительные ограничения на зону его применимости.
+
+Полный код код проекта доступен на GitHub\footnote{\url{https://github.com/fimmind/maze_solver/blob/master/main.cpp}}.
 
 \end{document}
